--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand p-0" href="/">
-          <img src="pumpkin.png" alt="logo-pumpkin" width="40" />
+          <img src="finchLogo.png" alt="logo-finch" width="45" />
         </a>
         <button
           class="navbar-toggler"
