--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
         padding: 1em;
       }
       .card:hover {
-        background-color: rgba(0, 0, 0, 0.1);
+        background-color: rgba(0, 0, 0, 0.09);
       }
       .card img {
         border-radius: 50%;
@@ -69,7 +69,7 @@
     <div class="container my-5">
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img
               src="awesomeProject1.jpg"
               class="card-img-top"
@@ -77,23 +77,25 @@
             />
             <div class="card-body">
               <h5 class="card-title">Money Tracking App</h5>
-              <p class="card-text">
+              <p>
                 Quickly and easily track your spending with this little app. You
                 can see trends, themes (what type of product or service you tend
                 to spend more on) and helpful tips to keep you in control of
                 your money
               </p>
-              <a
-                href="https://github.com/HollyFinch"
-                target="_blank"
-                class="btn btn-secondary"
-                >👀 GitHub</a
-              >
+              <div class="card-footer">
+                <a
+                  href="https://github.com/HollyFinch"
+                  target="_blank"
+                  class="btn btn-secondary"
+                  >👀 GitHub</a
+                >
+              </div>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img
               src="awesomeProject2.jpg"
               class="card-img-top"
@@ -101,21 +103,23 @@
             />
             <div class="card-body">
               <h5 class="card-title">Snake Game</h5>
-              <p class="card-text">
+              <p>
                 This cute little snake will keep you occupied while you're stuck
                 offline. Completely cashed! No need for the Internet
               </p>
-              <a
-                href="https://github.com/HollyFinch"
-                target="_blank"
-                class="btn btn-secondary"
-                >👀 GitHub</a
-              >
+              <div class="card-footer">
+                <a
+                  href="https://github.com/HollyFinch"
+                  target="_blank"
+                  class="btn btn-secondary"
+                  >👀 GitHub</a
+                >
+              </div>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <img
               src="awesomeProject3.jpg"
               class="card-img-top"
@@ -123,17 +127,19 @@
             />
             <div class="card-body">
               <h5 class="card-title">Choice! App</h5>
-              <p class="card-text">
+              <p>
                 Have too many projects? Not sure where to start? - Here's a
                 solution. Spin the wheel to see what activity you should spend
                 your time on today
               </p>
-              <a
-                href="https://github.com/HollyFinch"
-                target="_blank"
-                class="btn btn-secondary"
-                >👀 GitHub</a
-              >
+              <div class="card-footer">
+                <a
+                  href="https://github.com/HollyFinch"
+                  target="_blank"
+                  class="btn btn-secondary"
+                  >👀 GitHub</a
+                >
+              </div>
             </div>
           </div>
         </div>
