--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
               class="card-img-top"
               alt="project#1"
             />
-            <div class="card-body">
+            <div class="card-body d-grid grid-template-rows: auto 1fr">
               <h5 class="card-title">Money Tracking App</h5>
               <p>
                 Quickly and easily track your spending with this little app. You
@@ -101,7 +101,7 @@
               class="card-img-top"
               alt="project#2"
             />
-            <div class="card-body">
+            <div class="card-body d-grid grid-template-rows: auto 1fr">
               <h5 class="card-title">Snake Game</h5>
               <p>
                 This cute little snake will keep you occupied while you're stuck
@@ -125,7 +125,7 @@
               class="card-img-top"
               alt="project#3"
             />
-            <div class="card-body">
+            <div class="card-body d-grid grid-template-rows: auto 1fr">
               <h5 class="card-title">Choice! App</h5>
               <p>
                 Have too many projects? Not sure where to start? - Here's a
