--- a/projects.html
+++ b/projects.html
@@ -62,10 +62,14 @@
             <li class="nav-item">
               <a class="nav-link active" href="projects.html">Projects</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="localBusinesses.html">For Libby ❤️</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
+    <!-- navbar ends here  -->
     <div class="container my-5">
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
         <div class="col">
