--- a/localBusinesses.html
+++ b/localBusinesses.html
@@ -2252,7 +2252,7 @@
                             <div class="col">
                               <div class="card h-100">
                                 <h5 class="card-title">
-                                  Unleash the Wagging Tails
+                                  [your business name here]
                                 </h5>
                                 <img
                                   src="person1.jpg"
@@ -2263,18 +2263,18 @@
                                   class="card-body d-grid grid-template-rows: auto 1fr"
                                 >
                                   <p>
-                                    The Cornish Coast Calls: Unleash the Wagging
-                                    Tails! Is your Cornish pup howling with
-                                    boredom while you explore the rugged cliffs
-                                    and charming villages? Don't leave them
-                                    languishing indoors!
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipisicing elit. Dolore natus esse eum
+                                    cupiditate et delectus animi vel. Dolor
+                                    autem consequatur sequi, rem tenetur facilis
+                                    ullam, nam sunt ut tempora deserunt.
                                   </p>
                                   <div class="card-footer">
                                     <a
                                       href=""
                                       target="_blank"
                                       class="btn btn-secondary"
-                                      >waggingtails.co.uk</a
+                                      >link to your website</a
                                     >
                                   </div>
                                 </div>
@@ -2282,7 +2282,9 @@
                             </div>
                             <div class="col">
                               <div class="card h-100">
-                                <h5 class="card-title">The Wind Whisperers</h5>
+                                <h5 class="card-title">
+                                  [your business name here]
+                                </h5>
                                 <img
                                   src="person2.jpg"
                                   class="card-img-top"
@@ -2292,22 +2294,19 @@
                                   class="card-body d-grid grid-template-rows: auto 1fr"
                                 >
                                   <p>
-                                    On Cornwall's rugged coast, The Wind
-                                    Whisperers craft custom surfboards – wood
-                                    transformed into poetry. At Wind
-                                    Whisperer's, we don't just sell surfboards,
-                                    we craft bespoke tools for wave mastery.
-                                    Each board is meticulously shaped to your
-                                    individual style and surfing goals, just
-                                    like Ollivander's wands resonate with their
-                                    destined owners.
+                                    Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Ipsum quis quod a, nulla
+                                    voluptatem dolorem doloribus tenetur
+                                    incidunt modi iste amet non atque,
+                                    accusamus, exercitationem impedit. Quisquam
+                                    eligendi eveniet distinctio?
                                   </p>
                                   <div class="card-footer">
                                     <a
                                       href=""
                                       target="_blank"
                                       class="btn btn-secondary"
-                                      >windWhisperers.co.uk</a
+                                      >link to your website</a
                                     >
                                   </div>
                                 </div>
@@ -2316,7 +2315,7 @@
                             <div class="col">
                               <div class="card h-100">
                                 <h5 class="card-title">
-                                  Private Piano lessons
+                                  [your business name here]
                                 </h5>
                                 <img
                                   src="person3.jpg"
@@ -2327,17 +2326,19 @@
                                   class="card-body d-grid grid-template-rows: auto 1fr"
                                 >
                                   <p>
-                                    Cornwall Piano Retreat offers private
-                                    lessons tailored to you, taught by
-                                    passionate instructors in charming seaside
-                                    cottages. No exams, just pure joy of music.
+                                    Lorem ipsum dolor sit amet consectetur,
+                                    adipisicing elit. Officia, non expedita.
+                                    Nostrum tenetur pariatur fugiat hic
+                                    delectus, sapiente deleniti autem ullam
+                                    accusamus qui sint cum tempore. Pariatur
+                                    obcaecati saepe tempore.
                                   </p>
                                   <div class="card-footer">
                                     <a
                                       href=""
                                       target="_blank"
                                       class="btn btn-secondary"
-                                      >playTheKeys.co.uk</a
+                                      >link to your website</a
                                     >
                                   </div>
                                 </div>
