--- a/projects.html
+++ b/projects.html
@@ -74,11 +74,7 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
         <div class="col">
           <div class="card h-100">
-            <img
-              src="awesomeProject1.jpg"
-              class="card-img-top"
-              alt="project#1"
-            />
+            <img src="crownFinch3.jpg" class="card-img-top" alt="project#1" />
             <div class="card-body d-grid grid-template-rows: auto 1fr">
               <h5 class="card-title">Money Tracking App</h5>
               <p>
@@ -100,11 +96,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img
-              src="awesomeProject2.jpg"
-              class="card-img-top"
-              alt="project#2"
-            />
+            <img src="snakeFinch.jpg" class="card-img-top" alt="project#2" />
             <div class="card-body d-grid grid-template-rows: auto 1fr">
               <h5 class="card-title">Snake Game</h5>
               <p>
@@ -124,11 +116,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img
-              src="awesomeProject3.jpg"
-              class="card-img-top"
-              alt="project#3"
-            />
+            <img src="wheelFinch.jpg" class="card-img-top" alt="project#3" />
             <div class="card-body d-grid grid-template-rows: auto 1fr">
               <h5 class="card-title">Choice! App</h5>
               <p>
