--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img class="rounded-img" src="hollyfinch.png" alt="my face" />
             <h1 class="fw-light">Holly Finch</h1>
             <p class="lead text-muted">
-              Hey there, stranger! Nice to meet you❤️ Here you'll find some
+              <script src = "hello.js"></script> </script>, stranger! Nice to meet you❤️ Here you'll find some
               zesty projects to make your life easier and more fun.
             </p>
             <a
